--- a/paper/preamble/metadata.tex
+++ b/paper/preamble/metadata.tex
@@ -1,5 +1,5 @@
 \newcommand{\papertitle}{%
-  A Kronecker-factored Approximate Gauß-Newton Method for Physics-Informed Neural Networks 
+  Kronecker-factored Approximate Gauß-Newton Methods for Physics-Informed Neural Networks 
 }
 \title{\papertitle}
 
