--- a/paper/references.bib
+++ b/paper/references.bib
@@ -339,7 +339,7 @@
 
 @inproceedings{bettencourt2019taylor,
   title =        {Taylor-mode automatic differentiation for higher-order
-                  derivatives in JAX},
+                  derivatives in {JAX}},
   author =       {Bettencourt, Jesse and Johnson, Matthew J and Duvenaud, David},
   booktitle =    {Advances in Neural Information Processing Systems (NeurIPS);
                   Workhop on Program Transformations for ML},
