--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -16,7 +16,7 @@ We build on the idea of Kronecker-factored approximations known as KFAC proposed
 Since, the preconditioner of ENGD involves PDE terms absent in regression problems, the existing KFAC machinery can not be used off the shelve. 
 More precisely, we summarize our contributions as follows: 
 \begin{itemize}
-    \item We develop a Kronecker-factored approximation of the Gramian matrix appearing as a preconditioner in the energy natural gradient method which we call \emph{Kronecker-factored approximate Gramian} (KFAG), see~\Cref{?}.
+    \item We develop a Kronecker-factored approximation of the Gramian matrix appearing as a preconditioner in the energy natural gradient method which we call \emph{Kronecker-factored approximate Gramian} (KFAG) (or KFAGN / K-FAGN?), see~\Cref{?}.
     \item We provide an efficient implementation of KFAG and demonstrate experimentally that it provides a good approximation of the true Gramian, see~\Cref{?}. 
     \item We show that KFAG can be used to efficiently train PINNs of considerable size..., see~\Cref{?}. 
 \end{itemize}
