--- a/paper/sections/background_engd.tex
+++ b/paper/sections/background_engd.tex
@@ -11,7 +11,8 @@ Natural gradients have been introduced by~\citet{amari1998natural} and have show
 The general idea is to replace the vanilla GD update rule by a preconditioned version
     \[ \vtheta_{k+1} = \vtheta_k - \eta_k \mG(\vtheta_k)^{-1} \nabla L(\vtheta_k), \]
 where $\mG(\vtheta)\in\mathbb R^{p\times p}$, $\mG(\vtheta)_{ij} \coloneqq g_{u_\vtheta}(\partial_{\vtheta_i} u_\vtheta, \partial_{\vtheta_j} u_\vtheta)$ is a matrix capturing the function space geometry of the problem and its parametrization and $g$ denotes a suitable Riemannian metric.
-In least squares regression with data $(\vx_1, \vy_1), \dots, (\vx_N, \vy_N)$ the Gramian $\mG(\vtheta)$ is chosen as the (empirical) Fisher information matrix given by~\citep{martens2020new, eschenhagen2023kroneckerfactored}
+In least squares regression with data $(\vx_1, \vy_1), \dots, (\vx_N, \vy_N)$ the %Gramian $\mG(\vtheta)$ is given by 
+a popular choice as a Gramian is given by the Gauß-Newton matrix 
 %\begin{equation}
 %    F_I(\vtheta)_{ij} = \sum_{x} \frac{\partial_{\vtheta_i}p_\vtheta(x)\partial_{\vtheta_j}p_\vtheta(x)}{p_\vtheta(x)} = \sum_{x} \partial_{\vtheta_i} \log p_\vtheta(x) \partial_{\vtheta_j} \log p_\vtheta(x),
 %\end{equation}
@@ -19,9 +20,10 @@ In least squares regression with data $(\vx_1, \vy_1), \dots, (\vx_N, \vy_N)$ th
 %For a supervised learning problem with training data $(\vx_1, \vy_1), \dots, (\vx_N, \vy_N)$ the (empirical) Fisher-information matrix commonly used, has entries the entries
 \begin{equation}
   %\mF(\vtheta)_{ij} = \sum_{n=1}^N \partial_{\vtheta_i} u_\vtheta(\vx_n)\partial_{\vtheta_j} u_\vtheta(\vx_n) \quad \text{maybe use?}
-  \mF(\vtheta) = \frac1N\sum_{n=1}^N \jac_{\vtheta} u_{\vtheta}(\vx_n)^\top \jac_{\vtheta} u_{\vtheta}(\vx_n)
-  .
+  \mF(\vtheta) = \frac1N\sum_{n=1}^N \jac_{\vtheta} u_{\vtheta}(\vx_n)^\top \jac_{\vtheta} u_{\vtheta}(\vx_n) = \frac1N\sum_{n=1}^N \jac_{\vtheta} \vu_n^\top \jac_{\vtheta} \vu_n
+  ,
  \end{equation}
+which agrees with the (empirical) Fisher information matrix~\citep{martens2020new, eschenhagen2023kroneckerfactored}. Here, we have used the suggestive short-hand notation $\vu_n = u_\vtheta(\vx_n)$. 
 To account for the PDE terms in the loss function in PINNs,
 %the models $u_\vtheta$ are functions rather than probability measures %$p_\vtheta$
 %and the loss involves PDE terms.
@@ -47,7 +49,26 @@ the Gramian matrix
 has been suggested under the name \emph{energy natural gradient} (ENG), see~\cite{muller2023achieving}.
 The energy natural gradient method mimics Newton's method up to a projection onto the tangent space of the model and a discretization error that vanishes quadratically in the step size
 and improves the accuracy of PINNs by several orders of magnitude when compared to GD, Adam, or BFGS~\citep{muller2023achieving, ?}.
-The Gramian matrix $\mG(\theta)$ can be interpreted as the Gauß-Newton matrix of the residual function, see~\cite{} and Appendix....
+%The Gramian matrix $\mG(\theta)$ can be interpreted as the Gauß-Newton matrix of the residual function, see~\cite{} and Appendix....
+To distinguish it from the Gauß-Newton matrix $\mG(\vtheta)$ for PINNs, we refer to the Gauß-Newton matrix $\mF(\vtheta)$ for least-squares problems as the Fisher matrix or Fisher. 
+
+\paragraph{Interpretation as Gau\ss-Newton method}
+Consider the combined residual
+\begin{equation*}
+    r\colon\mathbb R^p\to\mathbb R^{N_\Omega+N_{\partial\Omega}}, \quad 
+    \vtheta 
+    \mapsto 
+    \begin{pmatrix}
+        N_\Omega^{-1/2}r_\Omega(\vtheta) \\ 
+        N_{\partial\Omega}^{-1/2}r_{\partial\Omega}(\vtheta)
+    \end{pmatrix},
+\end{equation*}
+where $r_{\Omega}(\vtheta)_n = \Delta u_\vtheta(\vx_n) + f(\vx_n)$ and $r_{\Omega}(\vtheta)_n = u_\vtheta(\vx_n^b) - g(\vx_n^b)$, respectively. 
+Then %(with the right choice of the inner product)
+$L(\vtheta) = \frac12 \lVert r(\vtheta) \rVert_2^2$ and hence the Gau\ss-Newton matrix is given by
+\begin{equation*}
+    \jac_\vtheta r(\vtheta)^\top \jac_\vtheta r(\vtheta) = \jac_\vtheta r_\Omega(\vtheta)^T \jac_\vtheta r_\Omega(\vtheta) + \jac_\vtheta r_{\partial\Omega}(\theta)^T \jac_\vtheta r_{\partial\Omega}(\vtheta) = \mG(\vtheta). 
+\end{equation*}
 
 %%% Local Variables:
 %%% mode: latex
